# cuda-mnist

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  cnn.cu  cnn.cuh  layer.cuh  main.cpp  matrix.cuh
